性能优化、Java 21新特性重构、补全中文注释
性能优化:
- BorderListener: PlayerMoveEvent使用位运算替代getChunk()避免同步加载
- IslandCreateTask: 下界/末地粘贴分散到后续tick避免单帧卡顿
- IslandCreateTask: 告示牌扫描从O(n³)改为缓存偏移列表
- IslandCommand: 移除Bukkit.getOfflinePlayer回退，依赖SQLite缓存
- SchematicManager: 基岩查找先扫底部6层，找不到再全量扫描
- IslandManager: 新增memberToIslandIndex反向索引，O(1)玩家岛屿查询
- IslandManager: deleteCountCache缓存删除次数
- SQLiteManager: setBorderEnabled/setFirstNetherJoin合并为UPSERT
- ColorUtil: HashSet改为ConcurrentHashMap.newKeySet()线程安全

Java 21新特性:
- GridLocation/InvitationData转为record
- SQL DDL转为Text Block (...)
- Entity/Vehicle/Explosion/Grief类型判断转为Pattern Matching switch
- 多处instanceof转为Pattern Matching
- Arrays.asList()改为List.of()/EnumSet.allOf()
- 索引循环改为增强for

代码注释:
- 全部49个Java源文件补全中文类/方法/逻辑注释